.happypack/s-29892942
SyntaxError: Missing class properties transform.

[0m [90m 44 | [39m[36mclass[39m [33mRenderSliderField[39m [36mextends[39m [33mComponent[39m {
 [90m 45 | [39m
[31m[1m>[22m[39m[90m 46 | [39m  state [33m=[39m {
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 47 | [39m    value[33m:[39m [35m1[39m
 [90m 48 | [39m  }[33m;[39m
 [90m 49 | [39m[0m

BabelLoaderError: SyntaxError: Missing class properties transform.

[0m [90m 44 | [39m[36mclass[39m [33mRenderSliderField[39m [36mextends[39m [33mComponent[39m {
 [90m 45 | [39m
[31m[1m>[22m[39m[90m 46 | [39m  state [33m=[39m {
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 47 | [39m    value[33m:[39m [35m1[39m
 [90m 48 | [39m  }[33m;[39m
 [90m 49 | [39m[0m

    at transpile (/home/vagrant/projects/instrumental/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/home/vagrant/projects/instrumental/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/home/vagrant/projects/instrumental/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/vagrant/projects/instrumental/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/vagrant/projects/instrumental/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/vagrant/projects/instrumental/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/vagrant/projects/instrumental/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/vagrant/projects/instrumental/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/vagrant/projects/instrumental/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/vagrant/projects/instrumental/node_modules/happypack/lib/HappyWorker.js:32:3)